--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,6 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - run: npm build
+    - run: pm2 remove -f typeorm-oracle-test
+    - run: pm2 start dist/server.js --name typeorm-oracle-test
