--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "@types/node": "^20.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "oracledb": "^6.2.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   }
 }
