--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - run: npm install
     - run: npm build
     - run: pm2 remove -f typeorm-oracle-test
       continue-on-error: true
